<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/pillicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/drug_pill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/drugInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:elevation="5dp"
        android:fontFamily="@font/roboto_bold"
        android:text="Drug Info"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toStartOf="@+id/drugInfoButton"
        android:layout_toEndOf="@+id/pillicon"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pillicon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium_italic"
            android:text="@string/notification_title"
            android:textSize="14sp"
            android:textStyle="italic"
            app:autoSizeMinTextSize="14sp" />

        <TextView
            android:id="@+id/notifDrugName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Forxiga"
            android:textSize="16sp"
            android:textStyle="bold"
            app:autoSizeMinTextSize="16sp" />

        <TextView
            android:id="@+id/notifTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/notificaiton_time"
            android:textSize="13sp"
            app:autoSizeMinTextSize="13sp" />

        <TextView
            android:id="@+id/notifLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/notificaiton_label"
            android:textSize="13sp"
            app:autoSizeMinTextSize="13sp" />

    </LinearLayout>

</RelativeLayout>